--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -51,10 +51,15 @@
 @import "blocks/copyright";
 
 
-// TODO добавить aria для чтения?
+// TODO добавить aria-label для чтения?
+// <span class="visually-hidden">VK</span>
 
 // TODO править изменение шрифта по breakpoints
 
 // TODO сделать скрипт для замены картинок в секции slider
 
 // TODO Проверить скрин-ридером
+
+// TODO скрипт для IE11 поддерживающий svg спрайты
+
+// TODO исправить подчеркивание под кнопками БЫЛО СТАЛО
