--- a/source/sass/blocks/footer-links.scss
+++ b/source/sass/blocks/footer-links.scss
@@ -17,7 +17,12 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-top: 48px;
+    padding-top: 46px;
+    padding-bottom: 46px;
+  }
+
+  @media (min-width: $desktop-breakpoint) {
+    padding-top: 49px;
     padding-bottom: 46px;
   }
 }
