--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -185,7 +185,7 @@ body {
   display: block;
 }
 
-.js-slider-before {
+.slider--before {
   // .slider__photo--before {
   //   display: block;
   // }
@@ -199,7 +199,7 @@ body {
   }
 }
 
-.js-slider-after {
+.slider--after {
   .slider__toggles {
     display: flex;
   }
