--- a/source/sass/variables.scss
+++ b/source/sass/variables.scss
@@ -10,8 +10,10 @@ $retina-dpi: 144dpi;
 
 // 320 mobile
 $mobile-wrapper: 280px;
+// $mobile-wrapper: 320px;
 $mobile-width: 320px;
 $mobile-padding: 0;
+// $mobile-padding: 20px;
 $mobile-width-only: 768;
 
 // 768 tablet
