--- a/source/sass/blocks/basic-products.scss
+++ b/source/sass/blocks/basic-products.scss
@@ -8,13 +8,13 @@ body {
 }
 
 .basic-products__wrapper {
-  width: $mobile-wrapper;
+  width: $mobile-width;
   padding-top: 5px;
 
   @media (min-width: $tablet-breakpoint) {
     width: $tablet-wrapper;
     margin-bottom: 45px;
-    padding-top: 20px;
+    padding-top: 24px;
   }
 
   @media (min-width: $desktop-breakpoint) {
@@ -30,9 +30,9 @@ body {
 .basic-products__title {
   margin-bottom: 18px;
   padding-top: 10px;
-  // padding-right: 20px;
+  padding-right: 20px;
   padding-bottom: 10px;
-  // padding-left: 20px;
+  padding-left: 20px;
 
   line-height: 60px;
 
@@ -41,8 +41,8 @@ body {
 
   @media (min-width: $tablet-breakpoint) {
     margin-bottom: 154px;
-    // padding-right: 30px;
-    // padding-left: 30px;
+    padding-right: 0;
+    padding-left: 0;
 
     font-size: 60px;
   }
