--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -103,7 +103,20 @@ body {
 }
 
 .contacts__mapframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+
   width: 100%;
+  height: 364px;
+
+  @media (min-width: $tablet-breakpoint) {
+    height: 400px;
+  }
+
+  // @media (min-width: $desktop-breakpoint) {
+  //
+  // }
 }
 
 .contacts__map-img {
