--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -26,8 +26,8 @@ body {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-top: 26px;
-    padding-bottom: 26px;
+    padding-top: 24px;
+    padding-bottom: 24px;
   }
 
   @media (min-width: $desktop-breakpoint) {
@@ -41,6 +41,8 @@ body {
   position: relative;
 
   width: 200px;
+  // TODO компенсируем пропадание logo
+  min-height: 55px;
   padding-top: 13px;
   padding-bottom: 15px;
 
