--- a/source/sass/blocks/products-proposal.scss
+++ b/source/sass/blocks/products-proposal.scss
@@ -5,18 +5,20 @@ body {
 
 
 .products-proposal {
+  // position: relative;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
   width: 320px;
   padding-top: 26px;
-  // padding-right: 20px;
+  padding-right: 20px;
   padding-bottom: 24px;
-  // padding-left: 20px;
+  padding-left: 20px;
 
   border: 1px solid $border_color;
 
+  // @include item-border;
 
   @media (min-width: $tablet-breakpoint) {
     width: 324px;
@@ -24,6 +26,8 @@ body {
     padding-right: 38px;
     padding-bottom: 37px;
     padding-left: 38px;
+
+    // border: none;
   }
 
   @media (min-width: $desktop-breakpoint) {
@@ -95,46 +99,13 @@ body {
 
   @include font_arial(12px, 400, $text_font_color);
 
-
   @media (min-width: $tablet-breakpoint) {
     width: 170px;
     margin-bottom: 81px;
 
     font-size: 16px;
   }
-
-
   // @media (min-width: $desktop-breakpoint) {
   //
   // }
-}
-
-.products-proposal__button {
-  // Text: Показать все
-  // line-height: 20px;
-  // line-height: 16px;
-  // @include font(16px, 400, $text_font_color);
-
-
-  // @media (min-width: $tablet-breakpoint) {
-  //
-  // }
-
-  // @media (min-width: $desktop-breakpoint) {
-  //
-  // }
-
-
-  // width: 280px
-  // height: 40px;
-  // ==================== tab
-  // font-size: 16px;
-  // line-height: 20px;
-  // width: 249px
-  // height: 40px;
-  // ==================== desctop
-  // font-size: 16px;
-  // line-height: 20px;
-  // width: 169px
-  // height: 40px;
 }
