code rewiew #1 - fix 8 errors

--- a/source/sass/blocks/additional-item.scss
+++ b/source/sass/blocks/additional-item.scss
@@ -44,6 +44,8 @@ body {
 .additional-item__title {
   display: flex;
   align-items: center;
+  margin: 0;
+  padding: 0;
   padding-top: 12px;
 
   line-height: 20px;
