--- a/source/sass/blocks/advantages.scss
+++ b/source/sass/blocks/advantages.scss
@@ -28,7 +28,9 @@ body {
 }
 
 .advantages__title {
+  margin: 0;
   margin-bottom: 17px;
+  padding: 0;
   // padding-top: 7px;
   padding-top: 0;
 
@@ -49,8 +51,12 @@ body {
 }
 
 .advantages__list {
+  margin: 0;
+  padding: 0;
   padding-top: 10px;
   padding-bottom: 10px;
+
+  list-style: none;
 
   @media (min-width: $tablet-breakpoint) {
     display: flex;
@@ -72,7 +78,9 @@ body {
   position: relative;
 
   min-height: 60px;
+  margin: 0;
   margin-bottom: 20px;
+  padding: 0;
 
   @media (min-width: $tablet-breakpoint) {
     flex-basis: 45.7%;
@@ -184,6 +192,8 @@ body {
 }
 
 .advantages__text {
+  margin: 0;
+  padding: 0;
   padding-top: 2px;
   padding-left: 80px;
 
