--- a/source/sass/blocks/basic-item.scss
+++ b/source/sass/blocks/basic-item.scss
@@ -9,6 +9,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   width: 320px;
+  margin: 0;
+  padding: 0;
   padding-right: 20px;
   padding-bottom: 24px;
   padding-left: 20px;
@@ -36,7 +38,7 @@ body {
 
   @media (min-width: $desktop-breakpoint) {
     width: 245px;
-    margin-bottom: 142px;
+    margin-bottom: 141px;
 
     &:nth-last-child(-n + 4) {
       margin-bottom: 0;
@@ -56,6 +58,19 @@ body {
   // }
 }
 
+.basic-item__links {
+  height: 144px;
+
+
+  @media (min-width: $tablet-breakpoint) {
+    height: 0;
+  }
+
+  // @media (min-width: $desktop-breakpoint) {
+  // height: 144px;
+  //
+  // }
+}
 
 .basic-item__img {
   width: 140px;
@@ -99,7 +114,9 @@ body {
 
 .basic-item__title {
   width: 80px;
+  margin: 0;
   margin-bottom: 13px;
+  padding: 0;
   padding-top: 21px;
 
   line-height: 20px;
@@ -128,6 +145,10 @@ body {
 }
 
 .description-list {
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
   line-height: 16px;
 
   @include font_arial(12px, 400, $text_font_color);
@@ -149,6 +170,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  margin: 0;
+  padding: 0;
 
   @media (min-width: $tablet-breakpoint) {
     padding-top: 5px;
