--- a/source/sass/blocks/basic-products.scss
+++ b/source/sass/blocks/basic-products.scss
@@ -14,7 +14,7 @@ body {
   @media (min-width: $tablet-breakpoint) {
     width: $tablet-wrapper;
     margin-bottom: 45px;
-    padding-top: 24px;
+    padding-top: 19px;
   }
 
   @media (min-width: $desktop-breakpoint) {
@@ -22,13 +22,15 @@ body {
     margin-bottom: 53px;
     // padding-right: 40px;
     // padding-left: 40px;
-    padding-top: 9px;
+    padding-top: 7px;
   }
 }
 
 
 .basic-products__title {
+  margin: 0;
   margin-bottom: 18px;
+  padding: 0;
   padding-top: 10px;
   padding-right: 20px;
   padding-bottom: 10px;
@@ -56,6 +58,10 @@ body {
 .basic-products__list {
   display: flex;
   flex-wrap: wrap;
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
 
   @media (min-width: $tablet-breakpoint) {
     justify-content: space-between;
