--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -11,7 +11,6 @@ body {
   background-color: $main_grey_color;
 }
 
-
 .contacts__text-wrapper {
   display: flex;
   flex-wrap: wrap;
@@ -23,7 +22,7 @@ body {
 
 
   @media (min-width: $tablet-breakpoint) {
-    padding-top: 57px;
+    padding-top: 56px;
     padding-bottom: 46px;
   }
 
@@ -35,6 +34,7 @@ body {
 
     width: 570px;
     padding-top: 55px;
+    padding-bottom: 50px;
 
     background-color: $light_font_color;
   }
@@ -42,6 +42,8 @@ body {
 
 .contacts__title {
   flex-basis: 50%;
+  margin: 0;
+  padding: 0;
   padding-top: 10px;
   padding-bottom: 10px;
 
@@ -66,6 +68,8 @@ body {
 
 .contacts__address {
   flex-basis: 50%;
+  margin: 0;
+  padding: 0;
   padding-top: 10px;
   padding-bottom: 10px;
 
@@ -100,6 +104,12 @@ body {
 .contacts__map {
   position: relative;
   z-index: 0;
+
+  height: 364px;
+
+  @media (min-width: $tablet-breakpoint) {
+    height: 400px;
+  }
 }
 
 .contacts__mapframe {
