--- a/source/sass/blocks/keypoints.scss
+++ b/source/sass/blocks/keypoints.scss
@@ -116,7 +116,7 @@ body {
   flex-grow: 1;
   // justify-content: center;
   // align-self: stretch;
-  padding-top: 18px;
+  padding-top: 17px;
   padding-bottom: 10px;
 
   line-height: 24px;
@@ -127,6 +127,7 @@ body {
   @media (min-width: $tablet-breakpoint) {
     flex-grow: 0;
     width: 180px;
+    margin-top: -5px;
     margin-left: auto;
     padding: 0;
 
@@ -137,20 +138,24 @@ body {
 
   @media (min-width: $desktop-breakpoint) {
     width: 100%;
+    margin-top: 0;
     margin-left: 0;
-    padding-top: 52px;
+    padding-top: 51px;
     padding-bottom: 10px;
 
     text-align: left;
   }
 }
 
-.item-wide__value,
-.item-wide__option {
+.item-wide__value {
   // Text: Затраты на питание: 15 000 руб.
 }
 
 .item-wide__option {
+  @media (min-width: $tablet-breakpoint) {
+    // line-height: 29px;
+  }
+
   @media (min-width: $desktop-breakpoint) {
     margin-left: 60px;
   }
