--- a/source/sass/blocks/products-proposal.scss
+++ b/source/sass/blocks/products-proposal.scss
@@ -67,6 +67,8 @@ body {
 }
 
 .products-proposal__title {
+  margin: 0;
+  padding: 0;
   padding-top: 5px;
   padding-bottom: 5px;
 
@@ -90,7 +92,9 @@ body {
 }
 
 .products-proposal__content {
+  margin: 0;
   margin-bottom: 16px;
+  padding: 0;
   padding-top: 5px;
   padding-bottom: 5px;
 
@@ -108,4 +112,9 @@ body {
   // @media (min-width: $desktop-breakpoint) {
   //
   // }
+}
+
+.products-proposal__link {
+  // font: inherit;
+  // color: inherit;
 }
