--- a/source/sass/blocks/program-set.scss
+++ b/source/sass/blocks/program-set.scss
@@ -24,6 +24,11 @@ body {
 
 .program-set__list {
   // program-list
+  margin: 0;
+  padding: 0;
+
+  list-style: none;
+
   @media (min-width: $desktop-breakpoint) {
     display: flex;
     flex-wrap: wrap;
